# videoq

./: .env.example  .github-issue-external-id.md  .gitignore  .gitmodules  CLAUDE.md  Caddyfile  Dockerfile  E2E_IMPLEMENTATION_SUMMARY.md  LICENSE  README.en.md  README.ja.md  README.md  cloudflare-setup.md  docker-compose.cloudflare.yml  docker-compose.yml  nginx.conf  requirements.txt  setup-ssl.sh  system-configuration-diagram.md
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.lambda  Dockerfile.worker  README.md  backend-clean-architecture-review.md  backend_clean_architecture_review.md  clean-architecture-review.md  clean_architecture_review.md  lambda_handler.py  main.py  manage.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
backend/app/: admin.py  apps.py  authentication.py  celery_config.py  composition_root.py  container.py  factories.py  models.py  tasks.py  tests.py  urls.py  views.py
backend/app/api/: serializers.py  urls.py  views.py
backend/app/auth/: adapters.py  factories.py  ports.py  repositories.py  serializers.py  services.py  urls.py  use_cases.py  views.py
backend/app/billing/: serializers.py  services.py  urls.py  views.py
backend/app/chat/: adapters.py  factories.py  langchain_utils.py  ports.py  presenters.py  repositories.py  serializers.py  urls.py  use_cases.py  views.py
backend/app/common/: __init__.py  actors.py  authentication.py  exceptions.py  openapi.py  permissions.py  ports.py  responses.py  throttles.py
backend/app/composition_root/: __init__.py  _video_core_providers.py  _video_group_providers.py  _video_shared.py  _video_tag_providers.py  auth.py  billing.py  chat.py  evaluation.py  limits.py  media.py  oauth.py  plog.py  video.py
backend/app/contracts/: __init__.py  auth.py  media_validation.py  tasks.py
backend/app/core/: __init__.py  config.py  registry.py
backend/app/dependencies/: __init__.py  admin.py  (+11 more)
backend/ask_video/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
backend/scripts/: compare_qa_rag_vs_agent.py
backend/talk_video/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
backend/templates/: swagger-ui.html
backend/videoq/: asgi.py  settings.py  urls.py  wsgi.py
(+1238 files in other folders)
