[project]
name = "ask-video-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=23.0.0",
    "uvicorn>=0.38.0",
    "uvicorn-worker>=0.4.0",
    "openai>=2.6.1",
    "cryptography>=46.0.3",
    "langchain>=1.0.2",
    "langchain-openai>=1.0.1",
    "celery>=5.5.3",
    "redis>=7.0.0",
    "ffmpeg-python>=0.2.0",
]
